You can now choose which eye to take a screenshot from

--- a/OW360Camera/default-config.json
+++ b/OW360Camera/default-config.json
@@ -3,6 +3,8 @@
   "settings": {
     "ScreenshotKey" : "C",
     "VideoKey" : "V",
+    "Left Eye" : true,
+    "Right Eye" : false,
     "Resolution": 2048,
     "SavePath": "./Pictures/",
     "MaxGPUMemoryUsage (MB)": "4000"
