I forgot what these changes were

--- a/OW360Camera/default-config.json
+++ b/OW360Camera/default-config.json
@@ -6,7 +6,6 @@
     "Left Eye" : true,
     "Right Eye" : false,
     "Resolution": 2048,
-    "SavePath": "./Pictures/",
-    "MaxGPUMemoryUsage (MB)": "4000"
+    "SavePath": "./Pictures/"
   }
 }
